--- a/client/signup.css
+++ b/client/signup.css
@@ -1,1 +1,20 @@
-/* CSS declarations go here */
+html, body {
+	height: 100%;
+}
+#wrap {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -3em;
+	padding-top: 6em;
+}
+#footer {
+	background-color: #f5f5f5;
+	height: 3em;
+	overflow: hidden;
+}
+.credit {
+	text-align: center;
+	margin: 0;
+	line-height: 3em !important;
+}
