--- a/client/signup.css
+++ b/client/signup.css
@@ -6,7 +6,9 @@ html, body {
 	height: auto !important;
 	height: 100%;
 	margin: 0 auto -3em;
-	padding-top: 6em;
+}
+#spacer {
+	height: 6em;
 }
 #footer {
 	background-color: #f5f5f5;
@@ -17,4 +19,20 @@ html, body {
 	text-align: center;
 	margin: 0;
 	line-height: 3em !important;
+}
+.btn-custom {
+	background-color: hsl(201, 60%, 33%) !important;
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f9ccf", endColorstr="#216386");
+	background-image: -khtml-gradient(linear, left top, left bottom, from(#3f9ccf), to(#216386));
+	background-image: -moz-linear-gradient(top, #3f9ccf, #216386);
+	background-image: -ms-linear-gradient(top, #3f9ccf, #216386);
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3f9ccf), color-stop(100%, #216386));
+	background-image: -webkit-linear-gradient(top, #3f9ccf, #216386);
+	background-image: -o-linear-gradient(top, #3f9ccf, #216386);
+	background-image: linear-gradient(#3f9ccf, #216386);
+	border-color: #216386 #216386 hsl(201, 60%, 28%);
+	color: #fff !important;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+	//-webkit-font-smoothing: antialiased;
 }
