longer bio and if logging in

--- a/client/signup.css
+++ b/client/signup.css
@@ -34,6 +34,9 @@ a {
 	margin: 0;
 	line-height: 3em !important;
 }
+#bio {
+	white-space: pre-wrap;
+}
 .btn-custom {
 	background-color: hsl(201, 60%, 33%) !important;
 	background-repeat: repeat-x;
