--- a/client/signup.css
+++ b/client/signup.css
@@ -15,6 +15,9 @@ html, body {
 a {
 	cursor: pointer;
 }
+form .alert {
+	margin-bottom: 0 !important;
+}
 .modal-backdrop, .modal-backdrop.fade.in {
 opacity: 0.1 !important;
 filter: alpha(opacity=10) !important;
@@ -26,7 +29,7 @@ filter: alpha(opacity=10) !important;
 	margin: 0 auto -3em;
 }
 #spacer {
-	height: 6em;
+	height: 3em;
 }
 #footer {
 	background-color: #f5f5f5;
